test_regress/t/t_tagged_case.out
%Error-UNSUPPORTED: t/t_tagged_case.v:29:5: Unsupported: void (for tagged unions)
   29 |     void Invalid;
      |     ^~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged_case.v:35:5: Unsupported: void (for tagged unions)
   35 |     void          Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:44:5: Unsupported: void (for tagged unions)
   44 |     void        Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:65:5: Unsupported: void (for tagged unions)
   65 |     void    Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:73:5: Unsupported: void (for tagged unions)
   73 |     void      Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:82:5: Unsupported: void (for tagged unions)
   82 |     void      Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:89:5: Unsupported: void (for tagged unions)
   89 |     void   Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:95:5: Unsupported: void (for tagged unions)
   95 |     void  Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:104:5: Unsupported: void (for tagged unions)
  104 |     void  Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:128:9: Unsupported: tagged union
  128 |     v = tagged Invalid;
      |         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:130:5: Unsupported: case matches (for tagged union)
  130 |     case (v) matches
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:131:7: Unsupported: tagged union
  131 |       tagged Invalid : result = 1;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:132:7: Unsupported: tagged pattern
  132 |       tagged Valid .n : result = n;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:132:20: Unsupported: pattern variable
  132 |       tagged Valid .n : result = n;
      |                    ^
%Error-UNSUPPORTED: t/t_tagged_case.v:137:9: Unsupported: tagged union
  137 |     v = tagged Valid (123);
      |         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:139:5: Unsupported: case matches (for tagged union)
  139 |     case (v) matches
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:140:7: Unsupported: tagged union
  140 |       tagged Invalid : result = -1;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:141:7: Unsupported: tagged pattern
  141 |       tagged Valid .n : result = n;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:141:20: Unsupported: pattern variable
  141 |       tagged Valid .n : result = n;
      |                    ^
%Error-UNSUPPORTED: t/t_tagged_case.v:146:10: Unsupported: tagged union
  146 |     wt = tagged Wide60 (60'hFEDCBA987654321);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:148:5: Unsupported: case matches (for tagged union)
  148 |     case (wt) matches
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:149:7: Unsupported: tagged union
  149 |       tagged Invalid : wide60_result = 0;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:150:7: Unsupported: tagged pattern
  150 |       tagged Wide60 .w : wide60_result = w;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:150:21: Unsupported: pattern variable
  150 |       tagged Wide60 .w : wide60_result = w;
      |                     ^
%Error-UNSUPPORTED: t/t_tagged_case.v:158:10: Unsupported: tagged union
  158 |     wt = tagged Wide90 (90'hDE_ADBEEFCA_FEBABE12_3456);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:160:5: Unsupported: case matches (for tagged union)
  160 |     case (wt) matches
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:161:7: Unsupported: tagged union
  161 |       tagged Invalid : wide90_result = 0;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:162:7: Unsupported: tagged pattern
  162 |       tagged Wide90 .w : wide90_result = w;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:162:21: Unsupported: pattern variable
  162 |       tagged Wide90 .w : wide90_result = w;
      |                     ^
%Error-UNSUPPORTED: t/t_tagged_case.v:170:10: Unsupported: tagged union
  170 |     wt = tagged Byte8NonZeroLSB (8'hA5);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:172:5: Unsupported: case matches (for tagged union)
  172 |     case (wt) matches
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:173:7: Unsupported: tagged pattern
  173 |       tagged Byte8NonZeroLSB .b : result = b;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:173:30: Unsupported: pattern variable
  173 |       tagged Byte8NonZeroLSB .b : result = b;
      |                              ^
%Error-UNSUPPORTED: t/t_tagged_case.v:179:10: Unsupported: tagged union
  179 |     wt = tagged Word32LittleEndian (32'hDEADBEEF);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:181:5: Unsupported: case matches (for tagged union)
  181 |     case (wt) matches
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:182:7: Unsupported: tagged pattern
  182 |       tagged Word32LittleEndian .w : result = w;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:182:33: Unsupported: pattern variable
  182 |       tagged Word32LittleEndian .w : result = w;
      |                                 ^
%Error-UNSUPPORTED: t/t_tagged_case.v:188:10: Unsupported: tagged union
  188 |     at = tagged Arr '{10, 20, 30, 40};
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:190:5: Unsupported: case matches (for tagged union)
  190 |     case (at) matches
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:191:7: Unsupported: tagged union
  191 |       tagged Invalid : result = -1;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:192:7: Unsupported: tagged pattern
  192 |       tagged Scalar .s : result = s;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:192:21: Unsupported: pattern variable
  192 |       tagged Scalar .s : result = s;
      |                     ^
%Error-UNSUPPORTED: t/t_tagged_case.v:193:7: Unsupported: tagged pattern
  193 |       tagged Arr .a : result = a[0] + a[1] + a[2] + a[3];
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:193:18: Unsupported: pattern variable
  193 |       tagged Arr .a : result = a[0] + a[1] + a[2] + a[3];
      |                  ^
%Error-UNSUPPORTED: t/t_tagged_case.v:198:13: Unsupported: tagged union
  198 |     instr = tagged Jmp (tagged JmpC '{2'd1, 10'd256});
      |             ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:198:25: Unsupported: tagged union
  198 |     instr = tagged Jmp (tagged JmpC '{2'd1, 10'd256});
      |                         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:200:5: Unsupported: case matches (for tagged union)
  200 |     case (instr) matches
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:201:7: Unsupported: tagged pattern
  201 |       tagged Add .* : result = -1;
      |       ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:201:18: Unsupported: pattern wildcard
  201 |       tagged Add .* : result = -1;
      |                  ^~
%Error-UNSUPPORTED: t/t_tagged_case.v:202:7: Unsupported: tagged union
  202 |       tagged Jmp (tagged JmpU .a) : result = a;
      |       ^~~~~~
%Error: Exiting due to
